--- a/src/Nobetci.Web/Views/Shared/_AppLayout.cshtml
+++ b/src/Nobetci.Web/Views/Shared/_AppLayout.cshtml
@@ -19,7 +19,8 @@
             box-sizing: border-box;
         }
         body {
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
             font-family: 'Plus Jakarta Sans', sans-serif;
         }
         
